--- a/components/header.html
+++ b/components/header.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
-    <link href="./css/index.css" rel="stylesheet">
+    <link href="./header.css" rel="stylesheet">
 </head>
 <body>
     <h1> Hello World! </h1>
 </body>
-<script src="./js/index.js"></script>
+<script src="./header.js"></script>
 </html>
