--- a/components/header.html
+++ b/components/header.html
@@ -8,7 +8,190 @@
     <link href="./header.css" rel="stylesheet">
 </head>
 <body>
-    <h1> Hello World! </h1>
+    <div class="header">
+        <div class="top-nav">
+            <div class="container">
+                <div class="left1">
+                    <ul>
+                        Why Licious?
+                        <li> 
+                            Download App
+                        </li>
+                            <img src="https://www.licious.in/img/default/ios_app_icon.svg" alt="">
+                            <img src="https://www.licious.in/img/default/android_app_icon.svg" alt="">
+                    </ul>
+                </div>
+                <div class="right1">
+                    <ul>
+                        FSSC 22000 Certification
+                        <li>About Us</li>
+                        <li>Careers @Licious</li>
+                        <select>
+                            <option value="Contact Us">Contact Us
+                                <img src="https://www.licious.in/img/default/down-arrow.png">
+                            </option>
+                            <option>1800-4190-786</option>
+                            <option>Talktous@licious.com</option>
+                        </select>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="sub-header">
+            <div class="container">
+                <div class="logo">
+                    <a href="../index.html">
+                        <img src="https://www.licious.in/img/default/licious-logo.svg" alt="licious">
+                    </a>
+                </div>
+                <div class="city-location">
+                    <img class="location-icon" src="	https://www.licious.in/img/default/location_icon.svg" alt="location">
+                    <div class="address">
+                        <div class="city"> DELHI</div>
+                        <div class="location">
+                            <div class="area">Sector-11,Rohini,...</div>
+                            <img class="down-arrow" src="https://www.licious.in/img/default/down-arrow.png">
+                        </div>
+                    </div>
+                </div>
+                <div class="search-bar">
+                    <input type="text" class="search" placeholder="Search for any delicious product">
+                    <img class="search-logo" src="	https://www.licious.in/img/default/search_icon.svg" >
+                </div>
+                <div class="login-cart">
+                    <a href="">
+                        <div class="profile">
+                            <div class="login-pic">
+                                <img src="https://www.licious.in/img/default/profile_icon.svg" class="login-pic-padding">
+                            </div>
+                            <div class="login-text">Login</div>
+                        </div>
+                    </a>
+                    <a href="" class="">
+                        <img class="cart-pic" src="https://www.licious.in/img/default/cart_icon.svg" alt="">
+                        <span class="cart-text">Cart</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="category-list">
+            <div class="category">
+                <a href="">
+                    <div class="sameelem">
+                        <div class="samelogo">
+                        <img src="https://dao54xqhg9jfa.cloudfront.net/Category/f78249a3-c0c5-caae-a743-5b3669471b19/original/1601901874.191--2020-10-0518_14_34--472.png?format=webp" alt="">    
+                        </div>
+                        <div class="sametext">
+                        Today's Deals
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="sameelem">
+                        <div class="samelogo">
+                        <img src="https://dao54xqhg9jfa.cloudfront.net/Category/a2996820-bac5-5eb5-edf8-eae5bff352ce/original/1592902158.6637--2020-06-2314_19_18--472.png?format=webp" alt="">    
+                        </div>
+                        <div class="sametext">
+                            Chicken
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="sameelem">
+                        <div class="samelogo">
+                            <img src="https://dao54xqhg9jfa.cloudfront.net/Category/574f3ef3-e983-e441-ac54-af394e1dc0d1/original/1592241659.9546--2020-06-1522_50_59--472.png?format=webp" alt="">
+                        </div>
+                        <div class="sametext">
+                            Fish & Seafood
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="sameelem">
+                    <div class="samelogo">
+                        <img src="https://s3-ap-southeast-1.amazonaws.com/licious/cat/4/web_icon/1618835088.2308--2021-04-1917:54:48--472?format=webp" alt="">    
+                    </div>
+                    <div class="sametext">
+                        Ready to Cook
+                    </div>
+                </div>
+                </a>
+                <a href="">
+                    <div class="sameelem">
+                        <div class="samelogo">
+                            <img src="https://dao54xqhg9jfa.cloudfront.net/Category/493a653d-56cb-fc9a-7a33-5b30c1a3d27e/original/1592241599.8492--2020-06-1522_49_59--472.png?format=webp" alt="">
+                        </div>
+                        <div class="sametext">
+                            Mutton
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="sameelem">
+                        <div class="samelogo">
+                            <img src="https://dao54xqhg9jfa.cloudfront.net/Category/06eb2239-1fcc-a5de-2d57-a0081bca5c80/original/1592241843.644--2020-06-1522_54_03--472.png?format=webp" alt="">
+                        </div>
+                        <div class="sametext">
+                            Eggs
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="sameelem">
+                        <div class="samelogo">
+                            <img src="https://dao54xqhg9jfa.cloudfront.net/Category/feaaee0e-eb81-2444-c869-952cf0858977/original/1592241896.5018--2020-06-1522_54_56--472.png?format=webp" alt="">
+                        </div>
+                        <div class="sametext">
+                        Cold Cuts
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="sameelem">
+                        <div class="samelogo">
+                            <img src="https://dao54xqhg9jfa.cloudfront.net/Category/1aebd012-022b-0e44-a673-21818a98320c/original/1592241756.9036--2020-06-1522_52_36--472.png?format=webp" alt="spreads">
+                        </div>
+                        <div class="sametext">
+                        Spreads
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="sameelem">
+                        <div class="samelogo">
+                            <img src="https://s3-ap-southeast-1.amazonaws.com/licious/cat/37/web_icon/1612872334.9746--2021-02-0917:35:34--472?format=webp" alt="">
+                        </div>
+                        <div class="sametext">
+                            Combos
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="sameelem">
+                        <div class="samelogo">
+                            <img src="https://s3-ap-southeast-1.amazonaws.com/licious/cat/42/web_icon/1612850724.2211--2021-02-0911:35:24--472?format=webp" alt="">
+                        </div>
+                        <div class="sametext">
+                            Prawns
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="sameelem">
+                        <div class="samelogo">
+                            <img src="https://s3-ap-southeast-1.amazonaws.com/licious/cat/39/web_icon/1615189641.1944--2021-03-0813:17:21--472?format=webp" alt="">
+                        </div>
+                        <div class="sametext">
+                            Kebabs & Tandoor
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="right-arrow-container">
+                <img class="right-arrow" src="	https://www.licious.in/img/default/down-arrow.png" alt="">
+            </div>
+        </div>
+    </div>
 </body>
 <script src="./header.js"></script>
 </html>
