--- a/components/header.html
+++ b/components/header.html
@@ -37,6 +37,8 @@
                 </div>
             </div>
         </div>
+
+
         <div class="sub-header">
             <div class="container">
                 <div class="logo">
@@ -74,6 +76,8 @@
                 </div>
             </div>
         </div>
+
+
         <div class="category-list">
             <div class="category">
                 <a href="">
@@ -107,7 +111,7 @@
                     </div>
                 </a>
                 <a href="">
-                    <div class="sameelem">
+                    <div class="sameelem" style="margin-left: 10px;">
                     <div class="samelogo">
                         <img src="https://s3-ap-southeast-1.amazonaws.com/licious/cat/4/web_icon/1618835088.2308--2021-04-1917:54:48--472?format=webp" alt="">    
                     </div>
@@ -191,6 +195,8 @@
                 <img class="right-arrow" src="	https://www.licious.in/img/default/down-arrow.png" alt="">
             </div>
         </div>
+
+
     </div>
 </body>
 <script src="./header.js"></script>
