--- a/css/chicken.css
+++ b/css/chicken.css
@@ -123,7 +123,7 @@
     
     cursor: pointer;
     color: white;
-    background-color: red;
+    background-color: #e41d36;
     border-radius: 5%;
     font-size: 13px;
     font-weight: 400;
@@ -151,7 +151,7 @@
 }
 .cartBtnWithPrice>h4{
     margin-left: 10px;
-    color: red;
+    color: #e41d36;
 }
 .btn{
     height: 30px;
@@ -159,7 +159,7 @@
     margin: 4%;
     cursor: pointer;
     color: white;
-    background-color: red;
+    background-color: #e41d36;
     border-radius: 5%;
     font-size: 11px;
     font-weight: 600;
@@ -184,27 +184,89 @@
  /*  cart item div */
 
  #added-items{
-     height: 100vh;
+     height: auto;
      width: 30vw;
      background-color: white;
      position: absolute;
      right: 0%;
-     z-index: 10;
+     z-index: 40;
      display: none;
      padding: 2%;
-     box-sizing: border-box;
+     box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
      
+
+
  }
- #added-items > h3 {
+
+ #buttonFlex {
+    display: flex;
+    justify-content: space-between;
+}
+ #added-items > h4 {
      background-color: darkgreen;
      color:white;
  }
+ #added-items > h1 {
+    font-family: Lato;
+ }
+ #added-items > button  {
+    height: 30px;
+    padding: 2%;
+    margin-left: 90%;
+    cursor: pointer;
+    color: white;
+    background-color: #e41d36;
+    border-radius: 5%;
+    font-size: 11px;
+    font-weight: 600;
+    border: none;
+ }
+ #added-items > button + button {
+    height: 30px;
+    padding: 2%;
+    margin-left: 90%;
+    margin-top: 4%;
+    cursor: pointer;
+    color: white;
+    background-color: #e41d36;
+    border-radius: 5%;
+    font-size: 11px;
+    font-weight: 600;
+    border: none;
+ }
+ 
 .item{
-   border: 1px solid black;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    padding:10px;
 }
 
 .addedCartImg{
-height: 10%;
-width: 10%;
+height: 50%;
+width: 50%;
 }
+
+.tot{
+
+    color: crimson; 
+    font-style:inherit
+ }
+ .cartHead{
+    
+     font-family:sans-serif
+ }
+ #cartBigImg{
+     height: 100px;
+     width: 100px;
+ }
+
+ #total{
+    color: crimson; 
+    padding-top: 20px;
+    font-size: 25px;
+    font-weight: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+
+ }
+
+ 
