--- a/css/chicken.css
+++ b/css/chicken.css
@@ -96,19 +96,25 @@
     height: 110px;
     width: 50%;
     margin: auto;
+    /* box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px; */
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     background-color: #FBDC93;
     margin-top: 4%;
     margin-bottom: 4%;
+    border-radius: 5px;
 }
 #boxImageTop{
     display: flex;
     justify-content: space-between;
-    
     padding: 2%;
-    border-radius: 2%;
+    border-radius: 5px;    
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    
+}
+hr
+{
+    border: 0.5px solid rgba(0,0,0,.2);
+    padding: 0;
+    margin: 0;
 }
 #boxImageDown{
     text-align: left;
@@ -123,7 +129,7 @@
     
     cursor: pointer;
     color: white;
-    background-color: red;
+    background-color: #e41d36;
     border-radius: 5%;
     font-size: 13px;
     font-weight: 400;
@@ -151,7 +157,7 @@
 }
 .cartBtnWithPrice>h4{
     margin-left: 10px;
-    color: red;
+    color: #e41d36;
 }
 .btn{
     height: 30px;
@@ -159,7 +165,7 @@
     margin: 4%;
     cursor: pointer;
     color: white;
-    background-color: red;
+    background-color: #e41d36;
     border-radius: 5%;
     font-size: 11px;
     font-weight: 600;
