--- a/components/header.html
+++ b/components/header.html
@@ -40,9 +40,9 @@
 
 
         <div class="sub-header">
-            <div class="container">
+            <div class="contain">
                 <div class="logo">
-                    <a href="../index.html">
+                    <a href="../after-login.html">
                         <img src="https://www.licious.in/img/default/licious-logo.svg" alt="licious">
                     </a>
                 </div>
