--- a/components/orderSuccess.html
+++ b/components/orderSuccess.html
@@ -9,7 +9,7 @@
         body
         {
             text-align: center;
-            background-color: #f39c6f;
+            background-color: #ff9c71;
         }
         .container
         {
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="../index.html">
+        <a href="../after-login.html">
             <img src="https://cdn.dribbble.com/users/2139038/screenshots/4434155/media/7196d846e2118871d278d8da71800600.gif" alt="">
         </a>
     </div>
