--- a/css/chicken.css
+++ b/css/chicken.css
@@ -34,7 +34,7 @@
 #topGrid{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(1,480px);
+    grid-template-rows: auto;
     gap:20px;
     width: 70%;
     margin: auto;
@@ -63,7 +63,7 @@
 #gridContainerBox{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(7,480px);
+    grid-template-rows: auto;
     gap:20px;
     width: 70%;
     margin: auto;
@@ -278,5 +278,37 @@ width: 50%;
      text-decoration: none;
      color:white;
  }
-
  
+ @media all and (min-width: 514px) and (max-width: 938px)
+ {
+     #topGrid{
+         grid-template-columns: repeat(2,1fr);
+         grid-template-rows: auto;
+     }
+ 
+     #gridContainerBox{
+         grid-template-columns: repeat(2,1fr);
+         grid-template-rows: auto;
+     }
+     #check
+     {
+         margin-top: 150px;
+     }
+ }
+
+@media all and (min-width: 200px) and (max-width: 513px)
+{
+    #topGrid{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+
+    #gridContainerBox{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    #check
+    {
+        margin-top: 280px;
+    }
+}
